# PeetsFEA

./: .editorconfig  .gitignore  AGENTS.md  AedtHandler.py  DEV_PLAN.md  PEETSPARETO_PCBPCB_PLAN.md  README.md  pyproject.toml  requirements.txt  setup.py  test_litzpcb.ipynb  tt.py
PeetsFEA/: __init__.py  __main__.py
PeetsFEA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PeetsFEA/fea/: EVDD_LITZ_PCB.py  EVDD_PCB_PCB.py
PeetsFEA/peetspareto/: __init__.py  _paths.py
PeetsFEA/peetspareto/litzpcb/: __init__.py  runtime.py
PeetsFEA/peetspareto/pcbpcb/: __init__.py  api.py  config.py  io.py  model.py  optimizer.py  protocols.py  runtime.py  schemas.py
legacy_codes/EVDD_PCB_PCB/: EVDD_PCB_PCB.py  NSGA-II.ipynb  copperloss_Tx_regression.ipynb  output_data.csv
legacy_codes/EVDD_PCB_PCB/py_module/: train_regressors.py
legacy_codes/EVDD_litz_PCB_v2/: EVDD_litz_plate.py  NSGA-II.ipynb  best_values.csv  copperloss_Tx_regression.ipynb  pareto_example.csv  pareto_front_backup_1.csv  pareto_front_backup_2.csv  pareto_front_backup_3.csv  pareto_front_backup_4.csv  pareto_front_backup_5.csv  pareto_front_backup_6.csv  pareto_front_backup_7.csv  pareto_front_backup_9.csv  pareto_front_final.csv
legacy_codes/EVDD_litz_PCB_v2/py_module/: README.md
parrarel/: run_1.sh  run_N.sh  script.py
peetsfea/: __init__.py  aedthandler.py  xformermaker.py
peetsfea/aedthandler/: __init__.py  aedthandler.py  peets_maxwell3d.py
peetsfea/util/: __init__.py  util.py
peetsfea/xformermaker/: __init__.py  xformermaker.py
peetsfea/xformermaker/evdd/: __init__.py  evdd_params.py  evdd_simul.py  test.ipynb
peetsfea/xformermaker/project1/: __init__.py  core_builder.py  project1.py  project2.ipynb  project2.py  winding_builder.py
peetsfea/xformermaker/project3/: __init__.py  project3.py
tests/: test_pcbpcb_optimizer.py
tests/pcbpcb/: test_model.py
tests/peetspareto/pcbpcb/: conftest.py  test_config.py  test_runtime.py  test_schemas.py
typings/ansys/core/: __init__.pyi  aedt_logger.pyi  circuit.pyi  circuit_netlist.pyi  common_rpc.pyi  desktop.pyi  edb.pyi  emit.pyi  filtersolutions.pyi  hfss.pyi  hfss3dlayout.pyi  icepak.pyi  maxwell.pyi  maxwellcircuit.pyi  mechanical.pyi  mixins.pyi  q3d.pyi  rmxprt.pyi  twinbuilder.pyi
typings/ansys/core/application/: __init__.pyi  aedt_objects.pyi  aedt_units.pyi  analysis.pyi  analysis_3d.pyi  analysis_3d_layout.pyi  analysis_circuit_netlist.pyi  analysis_hf.pyi  analysis_icepak.pyi  analysis_maxwell_circuit.pyi  analysis_nexxim.pyi  analysis_r_m_xprt.pyi  analysis_twin_builder.pyi  design.pyi  design_solutions.pyi  job_manager.pyi  variables.pyi
typings/ansys/core/emit_core/: __init__.pyi  couplings.pyi  emit_constants.pyi
typings/ansys/core/examples/: downloads.pyi
typings/ansys/core/extensions/: customize_automation_tab.pyi
typings/ansys/core/filtersolutions_core/: __init__.pyi  attributes.pyi  distributed_geometry.pyi  distributed_parasitics.pyi  distributed_radial.pyi  distributed_substrate.pyi  distributed_topology.pyi  dll_interface.pyi  export_to_aedt.pyi  graph_setup.pyi  ideal_response.pyi  lumped_nodes_and_leads.pyi  lumped_parasitics.pyi  lumped_termination_impedance_table.pyi  lumped_topology.pyi  multiple_bands_table.pyi  optimization_goals_table.pyi  transmission_zeros.pyi
typings/ansys/core/generic/: configurations.pyi  constants.pyi  data_handlers.pyi  design_types.pyi  file_utils.pyi  general_methods.pyi  ibis_reader.pyi  math_utils.pyi  numbers.pyi  quaternion.pyi  settings.pyi
typings/ansys/core/internal/: aedt_versions.pyi  checks.pyi  clr_module.pyi  desktop_sessions.pyi  errors.pyi  filesystem.pyi  grpc_plugin_dll_class.pyi  load_aedt_file.pyi
typings/ansys/core/modeler/: geometry_operators.pyi  modeler_2d.pyi  modeler_3d.pyi  modeler_pcb.pyi  schematic.pyi
(+75 files in other folders)
