[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PeetsFEA"
version = "0.3.6"
description = "Data-driven transformer optimization and AEDT simulation toolkit."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Harry Lee", email = "harry261@uos.ac.kr" }
]
keywords = ["transformer", "optimization", "pareto-front", "pyaedt", "nsga2"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]
dependencies = [
  "pyaedt==0.22.0",
  "pymoo==0.6.1.5",
  "lightgbm>=4.6.0",
  "numpy>=2.2.6",
  "pandas>=2.3.3",
  "joblib>=1.5.2",
  "portalocker>=2.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.14.1",
  "mypy>=1.18.2"
]

[project.urls]
Homepage = "https://github.com/Glaysia/PeetsFEA"

[project.scripts]
peetsfea = "PeetsFEA.__main__:main"

[tool.setuptools.packages.find]
include = ["PeetsFEA*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
"PeetsFEA/legacy_codes/EVDD_litz_PCB_v2/model" = [
  "legacy_codes/EVDD_litz_PCB_v2/model/B_center_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/B_left_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/B_top_left_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/copperloss_Rx1_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/copperloss_Rx2_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/copperloss_Tx_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/coreloss_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/Llt_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/Lmt_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/magnetizing_copperloss_Rx1_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/magnetizing_copperloss_Rx2_251112.pkl",
  "legacy_codes/EVDD_litz_PCB_v2/model/magnetizing_copperloss_Tx_251112.pkl",
]
"PeetsFEA/legacy_codes/EVDD_PCB_PCB/model" = [
  "legacy_codes/EVDD_PCB_PCB/model/B_center_251021.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/B_left_251021.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/B_top_left_251021.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/copperloss_Rx1_251021.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/copperloss_Rx2_251021.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/copperloss_Tx_251021.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/coreloss_251021.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/Llt_251021.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/Lmt_251021.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/magnetizing_copperloss_Rx1_251017.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/magnetizing_copperloss_Rx2_251017.pkl",
  "legacy_codes/EVDD_PCB_PCB/model/magnetizing_copperloss_Tx_251021.pkl",
]
